@@ -29,14 +29,30 @@ version 0.99_02
 
 =head1 OVERVIEW
 
-This section adds a listing of the documents authors.  It expects a C<authors>
-input parameter to be an arrayref of strings.  If no C<authors> parameter is
-given, it will do nothing.  Otherwise, it produces a hunk like this:
+This section plugin provides the same behaviour as
+L<Pod::Weaver::Section::Authors> but with the
+L<Pod::Weaver::Role::SectionReplacer> role applied.
+
+It will add or replace a listing of the document's authors.
+It expects the C<authors> input parameter to be an arrayref of strings.
+If no C<authors> parameter is given, it will do nothing.
+Otherwise, it produces a hunk like this:
+
+  =head1 AUTHOR
+
+  Author <a@example.com>
+
+Or in the case of multiple authors:
 
   =head1 AUTHORS
 
-    Author One <a1@example.com>
-    Author Two <a2@example.com>
+  =over
+  
+  =item Author One <a1@example.com>
+
+  =item Author Two <a2@example.com>
+
+  =back
 
 =for readme stop
 
